# scalable_docker

./: .gitignore  main.py  out  pyproject.toml  test.py
scalable_docker/: client.py  client_old.py  head_server.py  rest_client_base.py  rest_server_base.py  worker_client.py  worker_server.py
~/.scalable_docker/scalable-docker-image-0053730a-6362-459a-bbbe-d576ee8d5697/: Dockerfile
~/.scalable_docker/scalable-docker-image-00ce7fc9-d957-4e6f-addb-ae4e0abab4bb/: Dockerfile
~/.scalable_docker/scalable-docker-image-00cea402-8522-49ce-8256-91fd78d5f45c/: Dockerfile
~/.scalable_docker/scalable-docker-image-07ca246f-221e-433c-9d29-0354b6548323/: Dockerfile
~/.scalable_docker/scalable-docker-image-0ad01bb8-2516-4e0b-b1a9-8b2f267f5cd1/: Dockerfile
~/.scalable_docker/scalable-docker-image-0b1bde9e-33cb-46eb-90d9-b6af4569f47e/: Dockerfile
~/.scalable_docker/scalable-docker-image-0bb80128-5740-4c69-b7c5-bfa82d473490/: Dockerfile
~/.scalable_docker/scalable-docker-image-0dabb45a-811d-472b-a16b-b82fc1ec2c5b/: Dockerfile
~/.scalable_docker/scalable-docker-image-0e2b7545-c0e4-4abb-8830-04c273c323e8/: Dockerfile
~/.scalable_docker/scalable-docker-image-11c42417-445c-4a57-92e8-d292f627b20f/: Dockerfile
~/.scalable_docker/scalable-docker-image-13e1f020-1ad8-4aa1-b654-690d2cf273a0/: Dockerfile
~/.scalable_docker/scalable-docker-image-190ad704-7b6e-41e5-bd7a-f16aeb79cecc/: Dockerfile
~/.scalable_docker/scalable-docker-image-1c791bc9-4af7-4bbe-bf4c-d52f61ad448b/: Dockerfile
~/.scalable_docker/scalable-docker-image-1cae4025-2e82-4ca1-91ba-cf20d798d6ec/: Dockerfile
(+103 files in other folders)
