[project]
name = "scalable-docker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "aiohttp>=3.12.8",
    "beartype>=0.20.2",
    "flask>=3.1.0",
    "more-itertools>=10.7.0",
    "pyyaml>=6.0.2",
    "requests>=2.32.3",
    "tqdm>=4.67.1",
    "waitress>=3.0.2",
]
